--- a/workspace/provaP2.ipynb
+++ b/workspace/provaP2.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "52683db0",
+   "execution_count": 6,
+   "id": "3c1ed6fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,10 +15,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bc561296",
+   "execution_count": 7,
+   "id": "b080755a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+--------------------+\n",
+      "| id|               items|\n",
+      "+---+--------------------+\n",
+      "|319|[assignment_updat...|\n",
+      "|320|[assignment_updat...|\n",
+      "|321|[assignment_updat...|\n",
+      "|322|[assignment_updat...|\n",
+      "|323|[assignment_updat...|\n",
+      "|324|[assignment_updat...|\n",
+      "|325|[assignment_updat...|\n",
+      "|326|[assignment_updat...|\n",
+      "|327|[assignment_updat...|\n",
+      "|328|[assignment_updat...|\n",
+      "|329|[assignment_updat...|\n",
+      "|330|[assignment_updat...|\n",
+      "|331|[assignment_updat...|\n",
+      "|332|[assignment_updat...|\n",
+      "|333|[assignment_updat...|\n",
+      "|334|[assignment_updat...|\n",
+      "|335|[assignment_updat...|\n",
+      "|336|[assignment_updat...|\n",
+      "|337|[assignment_updat...|\n",
+      "|338|[assignment_updat...|\n",
+      "+---+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#df = spark.read.option(\"header\",\"true\").option(\"inferSchema\",\"true\").csv(\"cesta.csv\")\n",
     "df = spark.read.option(\"header\",\"true\").csv(\"cesta.csv\")#.drop(\"student_id\")\n",
@@ -41,8 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "31acb27f",
+   "execution_count": 8,
+   "id": "ff0b7f07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,10 +87,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a3ee4b02",
+   "execution_count": 9,
+   "id": "0da8ca64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----+\n",
+      "|               items| freq|\n",
+      "+--------------------+-----+\n",
+      "|  [assignment_view3]| 7353|\n",
+      "|[assignment_view3...| 7353|\n",
+      "|[assignment_upload4]| 8646|\n",
+      "|[assignment_uploa...| 8646|\n",
+      "|[assignment_update4]|14459|\n",
+      "+--------------------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Display frequent itemsets.\n",
     "model.freqItemsets.show()"
@@ -65,10 +115,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c0533d94",
+   "execution_count": 10,
+   "id": "3016b7e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+----------+----+\n",
+      "|          antecedent|          consequent|confidence|lift|\n",
+      "+--------------------+--------------------+----------+----+\n",
+      "|[assignment_upload4]|[assignment_update4]|       1.0| 1.0|\n",
+      "|  [assignment_view3]|[assignment_update4]|       1.0| 1.0|\n",
+      "+--------------------+--------------------+----------+----+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Display generated association rules.\n",
     "model.associationRules.show()"
